// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInputSnapshot should render search input 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "borderRadius": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 20,
    }
  }
>
  <TextInput
    onChangeText={[Function]}
  />
</View>
`;

exports[`SearchInputSnapshot should render search input with placeholder 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "borderRadius": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 20,
    }
  }
>
  <TextInput
    onChangeText={[Function]}
    placeholder="placeholder"
  />
</View>
`;
